# app/controllers/users_controller.rb
@@ -1,7 +1,7 @@
 class UsersController < ApplicationController
 
-    before_action :authenticate_user_from_token!, only: [:update, :destroy]
-    skip_before_action :verify_authenticity_token, if: -> { request.format.json? }
+    before_action :authenticate_user_from_token!, only: [:update, :destroy, :self_update, :self_destroy]
+    skip_before_action :verify_authenticity_token, if: -> { request.format.json?}
 
 
     def index
@@ -19,7 +19,7 @@ class UsersController < ApplicationController
         rescue => e
         respond_to do |format|
             format.html { redirect_to login_or_register_path, alert: "An error occurred: #{e.message}" }
-            format.json { render json: { error: "An error occurred: #{e.message}" }, status: :unprocessable_entity }
+            format.json { render json: { error: "An error occurred: #{e.message}" }, status: :not_found }
         end
     end
 
@@ -33,13 +33,13 @@ class UsersController < ApplicationController
 
         else
         format.html { render :new }
-        format.json { render json: { errors: @user.errors.full_messages }, status: :unprocessable_entity }
+        format.json { render json: { errors: @user.errors.full_messages }, status: :bad }
         end
     end
     rescue => e
     respond_to do |format|
         format.html { redirect_to login_or_register_path, alert: "An error occurred: #{e.message}" }
-        format.json { render json: { error: "An error occurred: #{e.message}" }, status: :unprocessable_entity }
+        format.json { render json: { error: "An error occurred: #{e.message}" }, status: :bad_request }
     end
     end
 
@@ -48,9 +48,9 @@ class UsersController < ApplicationController
         @user = User.find(params[:id])
 
         if @user.update(user_params)
-        render json: @user, status: :ok
+            render json: @user, status: :ok
         else
-        render json: { errors: @user.errors.full_messages }, status: :unprocessable_entity
+            render json: { errors: @user.errors.full_messages }, status: :not_found
         end
     end
 
@@ -61,9 +61,44 @@ class UsersController < ApplicationController
             @user.destroy
             render json: @user, status: :ok
         else
-            render json: { errors: ['User not found'] }, status: :unprocessable_entity
+            render json: { errors: ['User not found'] }, status: :not_found
         end
     end
+
+    def self_update
+        token = request.headers['Authorization'].to_s.split(' ').last
+        if token
+            decoded_token = JWT.decode(token, Rails.application.secrets.secret_key_base, true, algorithm: 'HS256')
+            user_id = decoded_token.first['user_id']
+            @user = User.find(user_id)
+            if @user.update(user_params)
+                render json: @user, status: :ok
+            else
+                render json: { errors: @user.errors.full_messages }, status: :not_found
+            end
+        else
+            render json: { errors: ['User not found'] }, status: :not_found
+        end
+    end
+
+    def self_destroy
+        token = request.headers['Authorization'].to_s.split(' ').last
+        if token
+            decoded_token = JWT.decode(token, Rails.application.secrets.secret_key_base, true, algorithm: 'HS256')
+            user_id = decoded_token.first['user_id']
+            @user = User.find(user_id)
+
+            if @user
+                @user.destroy
+                render json: @user, status: :ok
+            else
+                render json: { errors: ['User not found'] }, status: :not_found
+            end
+        else
+            render json: { errors: ['User not found'] }, status: :not_found
+        end
+    end
+    
     private
 
     # Only allow a list of trusted parameters through.
@@ -74,13 +109,19 @@ class UsersController < ApplicationController
 
     # Token-based authentication for API endpoints using JWT
     def authenticate_user_from_token!
+        puts ("authenticate_user_from_token!")
+        puts (request.headers['Authorization'])
         token = request.headers['Authorization'].to_s.split(' ').last
         if token.present?
             begin
                 decoded_token = JWT.decode(token, Rails.application.secrets.secret_key_base, true, algorithm: 'HS256')
                 user_id = decoded_token.first['user_id']
                 user = User.find(user_id)
-                sign_in user, store: false # Assuming you're using Devise for authentication
+                if user
+                    return true
+                else 
+                    render json: { error: 'User not found' }, status: :unauthorized
+                end
             rescue JWT::DecodeError
                 render json: { error: 'Invalid token' }, status: :unauthorized
             rescue ActiveRecord::RecordNotFound
